# redaction

./: .cursorrules  .gitignore  Cargo.toml  LICENSE.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
redaction/: Cargo.toml
redaction-derive/: Cargo.toml
redaction-derive/src/: container.rs  derive_enum.rs  derive_struct.rs  generics.rs  lib.rs  redacted_display.rs  strategy.rs  transform.rs  types.rs
redaction/src/: classification.rs  lib.rs  slog.rs
redaction/src/redaction/: mod.rs  policy.rs  redact.rs  sensitive.rs
redaction/tests/: compile_fail.rs  integration_basic.rs  integration_client_scenarios.rs  integration_edge_cases.rs  integration_slog.rs
redaction/tests/compile_fail/: classification_on_scalar.rs  classification_on_scalar.stderr  classification_on_struct.rs  classification_on_struct.stderr  walk_external_type.rs  walk_external_type.stderr
scripts/: release.sh
